// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 505.5151,
  },
  "p2": {
    "hp": 82.9903,
    "state": "VICTORY",
    "x": 608.4667,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 1559,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:671bdb56",
  "t300:fc6e3130",
  "t450:94b5a7d2",
  "t600:76ab8129",
  "t750:9547e12f",
  "t900:291e6799",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "IDLE",
    "x": 445.2007,
  },
  "p2": {
    "hp": 100,
    "state": "WALK",
    "x": 738.75,
  },
  "phase": "fight",
  "round": 2,
  "roundWins": [
    0,
    1,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:da9888ef",
  "t240:a8c96969",
  "t360:902a08b3",
  "t480:8940fb3a",
  "t600:7f745ffa",
  "t720:53b73cdb",
  "t840:b1d25794",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:db864795",
  "t240:50d95e6e",
  "t360:8d834d0c",
  "t480:93252258",
  "t600:d97e1dbb",
  "t720:3385ad72",
  "t840:a401a5f2",
  "t960:50f2b8b2",
  "t1080:6ef59851",
  "t1200:21a3caaa",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "DASH_FORWARD",
    "x": 473.188,
  },
  "p2": {
    "hp": 100,
    "state": "HEAVY_ATTACK",
    "x": 905.5625,
  },
  "phase": "fight",
  "round": 2,
  "roundWins": [
    0,
    1,
  ],
  "tick": 1200,
}
`;

exports[`ultimate timelines > replays alien against salad identically 1`] = `
[
  "t150:6613f48",
  "t300:20c18bf0",
  "t450:15599ce",
  "t600:9d99d793",
  "t750:c601884e",
  "t900:973063fc",
]
`;

exports[`ultimate timelines > replays alien against salad identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "IDLE",
    "x": 141.6667,
  },
  "p2": {
    "hp": 43.5372,
    "state": "DASH_FORWARD",
    "x": 362.9946,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`ultimate timelines > replays doge against sauce identically 1`] = `
[
  "t150:357cd67a",
  "t300:9bdffaa6",
  "t450:127bc932",
  "t600:8230d5e2",
  "t750:b90ee878",
  "t900:104cd017",
]
`;

exports[`ultimate timelines > replays doge against sauce identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "ULTIMATE",
    "x": 170.7679,
  },
  "p2": {
    "hp": 60.1336,
    "state": "HITSTUN",
    "x": 269.6164,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`ultimate timelines > replays ok against wizard identically 1`] = `
[
  "t150:c5dfafa4",
  "t300:902deb2",
  "t450:7048cb91",
  "t600:33397271",
  "t750:6677135d",
  "t900:4c9a724",
]
`;

exports[`ultimate timelines > replays ok against wizard identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "ULTIMATE",
    "x": 97.3333,
  },
  "p2": {
    "hp": 67.7879,
    "state": "HITSTUN",
    "x": 183.3333,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`ultimate timelines > replays tempura against scared identically 1`] = `
[
  "t150:16d2b41a",
  "t300:3e76e741",
  "t450:b4bfcdc8",
  "t600:c6d8a294",
  "t750:7570891",
  "t900:a80d48b7",
]
`;

exports[`ultimate timelines > replays tempura against scared identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "VICTORY",
    "x": 95,
  },
  "p2": {
    "hp": 0,
    "state": "KO",
    "x": 255.376,
  },
  "phase": "ending",
  "round": 1,
  "roundWins": [
    1,
    0,
  ],
  "tick": 900,
}
`;
